...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".profile.ProfileManagement">

        <!-- Back Button -->
        <Button
            android:id="@+id/profile_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="&#60;"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!-- Preferred Name Input -->
        <EditText
            android:id="@+id/profile_name_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:hint="Enter Preferred Name"
...
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/day_sun"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle_grey"
                    android:contentDescription="Sunday"
                    android:tag="0" />

...
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/day_mon"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle_grey"
                    android:contentDescription="Monday"
                    android:tag="1" />

...
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/day_tue"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle_grey"
                    android:contentDescription="Tuesday"
                    android:tag="2" />

...
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/day_wed"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle_grey"
                    android:contentDescription="Wednesday"
                    android:tag="3" />

...
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/day_thu"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle_grey"
                    android:contentDescription="Thursday"
                    android:tag="4" />

...
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/day_fri"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle_grey"
                    android:contentDescription="Friday"
                    android:tag="5" />

...
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp">

                <ImageView
                    android:id="@+id/day_sat"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/circle_grey"
                    android:contentDescription="Saturday"
                    android:tag="6" />

...
            android:layout_height="1dp"
            android:layout_marginTop="30dp"
            android:background="#CCCCCC"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_add_activity_button" />

        <TextView
            android:id="@+id/reminder_at_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="84dp"
...
            android:padding="10dp"
            android:text="+ Add Activity"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/profile_activity_list" />

        <Button
            android:id="@+id/save_settings_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="164dp"
            android:layout_marginEnd="50dp"
            android:padding="10dp"
...
